# WhisperAIAgent

./: .gitattributes  CMakeLists.txt  README.md
models/: gemma-3-4b-it-Q2_K_L.gguf
src/: command.cpp  command.h  commands.txt  llama_simple.cpp  llama_simple.h  main.cpp  parser.cpp  parser.h  piper_tts.cpp  piper_tts.h
